--- a/.github/index.html
+++ b/.github/index.html
@@ -3,7 +3,7 @@
 <main id="main"> 
     <h1 id="title">Will Ferrell</h1>
     <main>
-      <p id="heading"><strong>“We elves try to stick to the four main food groups, candy, candy cane, candy corn, and syrup.” – Will Ferrell</strong></p>
+      <p id="heading"><strong>“We elves try to stick to the four main food groups, candy, candy cane, candy corn and syrup.” – Will Ferrell</strong></p>
     
      <div> <img id="img-div" src="https://jackflacco.files.wordpress.com/2015/12/will-ferrell-elf-christmas-movie.jpg?w=840" alt="Will ferrell as Elf."> </div>
     
